urnik/static/stil.css
/* general */
.padded {
    padding: 5px;
}
.vertical-space {
    height: 2000px;  /* allows zoom out on mobile */
}
code {
    background: #e0e0e0;
    display: inline-block;
    padding: 2px;
    border-radius: 2px;
}
/* navigation and such */
nav {
    background-color: #555;
}
#urnik-logo {
    white-space: nowrap;
}
#menu-button {
    display: block;
}
#menu-button span {
    vertical-align: middle;
    font-size: 20pt;
    height: 64px;
    line-height: 64px;
    display: block;
    float: right;
    margin-left: 16px;
    margin-right: 16px;
}
#menu-button i {
    display: inline-block;
}
.side-nav, #sidenav-overlay {
    top: 64px;
}
.dropdown-content li > a {
    color: #039be5;
}
.dropdown-content li.disabled, .dropdown-content li.disabled > a {
    color: #5e5e5e;
    cursor: default;
}
#search-wrapper {
    padding: 0px 0px 5px 5px;
    overflow: hidden;
}
#search-wrapper input[type="search"] {
    padding-left: 2.5rem;
    width: calc(100% - 2.5rem);
    height: 64px;
}

#search-wrapper input[type="search"]:focus {
    border-bottom: 1px solid #039be5;
    box-shadow: 0 1px 0 0 #039be5;
}
@media only screen and (max-width: 600px) {
    #search-wrapper input[type="search"]::placeholder {
        color: transparent;
    }
}
#search-wrapper form label {
    margin-top: -12px;
    margin-left: -16px;
}
#search-wrapper form label i {
    font-size: 28px;
    color: #fff;
}
#search-wrapper ul.autocomplete-content {
    margin-bottom: 0px;
}

#search-wrapper ul.autocomplete-content li {
    min-height: 0px;
    padding: 5px;
}
#search-wrapper ul.autocomplete-content li > span {
    font-weight: normal;
    padding: 3px 5px;
    font-size: 14px;
    color: rgba(0,0,0,0.87);
}
#search-wrapper ul.autocomplete-content li > span > span.highlight {
    color: #039be5;
}
#admin-dropdown .dropdown-button {
    display: inline-block;
    padding: 0 10px;
}
#admin-dropdown .dropdown-button #user-name {
    margin-right: 15px;
}
#admin-dropdown .dropdown-button #dropdown-arrow {
    margin-left: 5px;
}
#admin-dropdown .dropdown-button #mode-indicator {
    margin-left: 0px;
}
/* urnik */
.urnik-wrapper {
    position: absolute;
    min-width: 1024px;
    min-height: 600px;
    top: 64px;
    bottom: 0px;
    width: 100%;
}
#urnik {
    position: absolute;
    left: 2.5%;
    top: 2.5%;
    width: 78%;
    height: 95%;
    background: white;
}
#urnik.cel {
    width: 95%;
}
#informacije {
    position: absolute;
    left: 81.4%;
    top: 0%;
    width: 18%;
    height: 100%;
    background: #fff;
    overflow-y: auto;
    overflow-x: hidden;
}
#informacije .collapsible-header {
    white-space: nowrap;
}
#informacije .collapsible-body {
    padding: 5px 20px;
}
#informacije .collapsible-body .collection-item {
    padding: 5px 0px;
}
#dnevi {
    position: absolute;
    left: 3%;
    top: 0%;
    width: 97%;
    height: 100%;
    color: #333;
}
#ure {
    position: absolute;
    left: 0%;
    top: 5%;
    width: 100%;
    height: 95%;
    color: #333;
}
#srecanja {
    position: absolute;
    left: 3%;
    top: 5%;
    width: 97%;
    height: 95%;
}
.ura {
    position: absolute;
    border-bottom: solid 1px #ddd;
    width: 100%;
}
.ura span {
    width: 3%;
    text-align: right;
    position: relative;
    display: block;
    bottom: -1.5em;
    padding-right: 0.25em;
}
.dan {
    position: absolute;
    text-align: center;
    top: 0;
    bottom: 0;
    border-left: solid 1px #ddd;
    width: 20%;
}

.srecanje-absolute-box {
    position: absolute;   /* spodaj je pixel perfect pozicioniranje boxov */
    padding-top: 3px;     /* izberi si koliko želiš margin od roba "dneva" */
    padding-bottom: 4px;  /* = top + 1, ker imamo spodaj 1px borderr */
    padding-left: 3px;    /* izberi si spacing med srecanji */
    padding-right: 0px;   /* vazna je samo vsota left + right, zato right = 0  */
}

.srecanje-absolute-box.leftmost {
    padding-left: 4px;  /* postavi levi rob od dneva na top + 1 = right + 1, ker imamo 1px borderja */
}
.srecanje-absolute-box.rightmost {
    padding-right: 3px;  /* postavi desni rob od dneva na top */
}

.srecanje {
    background: #eee;
    position: relative;
    width: 100%;
    height: 100%;
    padding: 2pt;
}
.srecanje a {
    color: #333;
}
.srecanje a:hover, .urejanje a {
    color: #039be5;
}
#informacije .srecanje-absolute-box {
    position: relative;
    height: 70px;
}
a.skrita {
    color: #555;
}
.ucitelj, .ucilnica, .tip {
    color: #555;
    font-weight: normal;
}
.letniki {
    font-size: 0.8em;
}
.ucitelj, .ucilnica {
    font-size: 0.8em;
    position: absolute;
    bottom: 2pt;
    z-index: 10;
}
.ucilnica {
    right: 4pt;
}
.termin {
    position: absolute;
    /*opacity: 0.6;*/
}
.termin:hover {
    /*opacity: 0.8;*/
}
.legenda {
    text-align: center;
}
.termin button {
    border-style: none;
    width: 100%;
    height: 100%;
}
.predmet {
    font-size: 0.9em;
    font-weight: bold;
}
.zaseden {
    background: rgba(255, 0, 0, 0.5);
}
.prosto {
    background: rgba(0, 128, 0, 0.5);
}
.proste_alternative {
    background: rgba(255, 165, 0, 0.5);
}
.deloma {
    background: repeating-linear-gradient(
      -45deg,
      rgba(0, 128, 0, 0.5),
      rgba(0, 128, 0, 0.5) 50%,
      rgba(255, 0, 0, 0.5) 50%,
      rgba(255, 0, 0, 0.5) 100%
    );
}
.proste_le_alternative {
    background: repeating-linear-gradient(
      -45deg,
      rgba(255, 165, 0, 0.5),
      rgba(255, 165, 0, 0.5) 50%,
      rgba(0, 128, 0, 0.5) 50%,
      rgba(0, 128, 0, 0.5) 100%
    );
}
.deloma_proste_alternative {
    background: repeating-linear-gradient(
      -45deg,
      rgba(255, 165, 0, 0.5),
      rgba(255, 165, 0, 0.5) 50%,
      rgba(255, 0, 0, 0.5) 50%,
      rgba(255, 0, 0, 0.5) 100%
    );
}
.vse_mogoce {
    background: repeating-linear-gradient(
      -45deg,
      rgba(255, 165, 0, 0.5),
      rgba(255, 165, 0, 0.5) 33%,
      rgba(255, 0, 0, 0.5) 33%,
      rgba(255, 0, 0, 0.5) 66%,
      rgba(0, 128, 0, 0.5) 100%,
      rgba(0, 128, 0, 0.5) 100%
    );
}
.mozne_ucilnice {
    visibility: hidden;
    position: absolute;
    left: 20px;
    /*height: 0;*/
    background: white;
    z-index: 100;
    width: 200px;
}
.premakni_srecanje:hover .mozne_ucilnice {
    visibility: visible;
}
.urejanje {
    position: absolute;
    visibility: hidden;
    /*top: 100%;*/
    left: 100%;
    width: 100px;
    top: 0;
    background: white;
    /*height: 100%;*/
    z-index: 100;
}
.urejanje a {
    display: block;
}
#informacije .urejanje {
    left: 0;
    width: 100px;
    top: 100%;
    background: white;
    /*height: 100%;*/
    z-index: 100;
}
.srecanje:hover {
/*            width: 20% !important;
    z-index: 100;
    background: #ddd;
*/        }
.srecanje:hover .urejanje {
    visibility: visible;
}
.urejanje form {
    /*display: inline;*/
}
.urejanje button {
    border-style: none;
    display: inline;
    background: none;
    padding: 0;
    color: rgb(3, 155, 229);
}
.termin:hover .izbira_ucilnice {
    position: relative;
    visibility: visible;
    z-index: 1000000 !important;
}
.izbira_ucilnice {
    position: absolute;
    visibility: hidden;
}
.izbrana_ucilnica {
    float: left;
    width: 25%;
}
.ustrezna.deloma_prosta button, .ustrezna.deloma_prosta {
    background: repeating-linear-gradient(
      -45deg,
      rgba(0, 128, 0, 1),
      rgba(0, 128, 0, 1) 50%,
      rgba(255, 0, 0, 1) 50%,
      rgba(255, 0, 0, 1) 100%
    );
}
.ustrezna.zasedena button, .ustrezna.zasedena {
    background: red;
}
.ustrezna.prosta button, .ustrezna.prosta {
    background: green;
}
.alternativa.deloma_prosta button, .alternativa.deloma_prosta {
    background: repeating-linear-gradient(
      -45deg,
      orange,
      orange 50%,
      rgba(255, 0, 0, 1) 50%,
      rgba(255, 0, 0, 1) 100%
    );
}
.alternativa.zasedena button, .alternativa.zasedena {
    background: red;
}
.alternativa.prosta button, .alternativa.prosta {
    background: orange;
}

/* front page */
#prikazi-sestavljen-urnik {
     background: none;
     color: #039be5;
     border: none;
     padding: 0;
     font: inherit;
     cursor: pointer;
}
#firstpage-menu tbody tr td ul {
    list-style-type: none;
    margin: 0px;
}
#firstpage-menu tbody tr td ul li {
    display: block;
    height: 55px;
}
#firstpage-menu tbody tr td ul li a i {
    color: inherit;
}

